--- a/style.css
+++ b/style.css
@@ -1,5 +1,2 @@
-/* ----- Modifier style ----- */
-.border-bot {
-  padding-bottom: 50px;
-  border-bottom: 2px solid #000000
-}
+body {
+  font-family: Arial, Helvetica, sans-serif;
