--- a/style.css
+++ b/style.css
@@ -1,2 +1,25 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
+body{
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+header{
+    height: 125px;
+    background-color: rgb(108, 247, 166);
+}
+h1, h2, h3 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    font-weight: 300;
+    color: rgb(9, 120, 211);
+}
+p, li {
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 2em;
+}
+a:link{color:rgb(3, 250, 3)}
+a:visited{color:rgba(3, 250, 3, 0.397)}
+a:hover{
+    color:rgb(3, 19, 250);
+    text-decoration: underline;
+}
+a:active{color:rgb(3, 102, 250)}
