--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    margin: 80px;
 }
 header{
     height: 125px;  
