--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 500px;
+    margin: 0px 300px 0px 300px;
 }
 header{
     height: 50px;  
