--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 header{
     height: 50px;  
     padding-bottom: 50px;
+    padding-top: 50px;
 }
 footer{
     background-color: rgb(108, 247, 166);
